bundle fraud-detection-portal as docker and include as service in docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ project/payment-solution/.gradle
 project/payment-solution/build
 project/fraud-detection-portal/.svelte-kit
 project/fraud-detection-portal/node_modules
+project/fraud-detection-portal/build
