--- a/project/payment-solution/build.gradle
+++ b/project/payment-solution/build.gradle
@@ -26,20 +26,10 @@ dependencies {
 
     // Spring Boot starters
     implementation('org.springframework.boot:spring-boot-starter-web')
-    // implementation('org.springframework.boot:spring-boot-starter-web') {
-    //     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    // }
-
     implementation('org.springframework.boot:spring-boot-starter-mail')
-    // implementation('org.springframework.boot:spring-boot-starter-mail') {
-    //     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    // }
-
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    // implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
-    //     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    // }
-    
+
+    // Logging
     implementation 'ch.qos.logback:logback-classic'
     implementation 'org.slf4j:slf4j-api'
 
@@ -60,12 +50,6 @@ dependencies {
     // ONNIX
     implementation 'com.microsoft.onnxruntime:onnxruntime:1.16.3'
     
-    // Parquet reading
-    // implementation 'org.apache.parquet:parquet-common:1.12.3'
-    // implementation 'org.apache.parquet:parquet-avro:1.12.3'
-    // implementation 'org.apache.arrow:arrow-vector:12.0.1'
-    // implementation 'org.apache.arrow:arrow-memory-netty:12.0.1'
-    // implementation 'org.apache.arrow:arrow-dataset:12.0.1'
 
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
