--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ project/mlops-pipeline/data/transactions.parquet
 project/mlops-pipeline/data/winsorized_transactions.parquet
 project/data-processing/.ssh_tunnel
 metadata.yaml
+cp630-final-project.mp4
